JSAI/error/src/test/resources/base/delete_del-t-hasfield.js
var rec = {moo: "cow"};
delete(rec.moo);
print(rec.moo);
